调整包结构，添加 agent 端接收 server 端的消息